[gd_scene load_steps=8 format=2]

[ext_resource path="res://Map/TileSegments/StartSegment.tscn" type="PackedScene" id=1]
[ext_resource path="res://Map/TileSegments/BossSegment0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Map/Boat.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://Main/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://SeaweedScript-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -136.0
margin_top = -196.0
margin_right = 657.0
margin_bottom = 615.0
color = Color( 0.215686, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossSegment0" parent="." instance=ExtResource( 2 )]
north = true
south = true

[node name="StartSegment" parent="." instance=ExtResource( 1 )]
position = Vector2( 288, 0 )
north = true
south = true
east = true

[node name="Boat" parent="." instance=ExtResource( 3 )]
position = Vector2( -16, 144 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Label" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -167.5
margin_bottom = 167.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.215686, 1, 1, 1 )
text = "Attack/move"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD"]
[connection signal="crystals_changed" from="." to="Boat" method="_on_WinSegment_crystals_changed"]
[connection signal="item_picked_up" from="." to="HUD" method="_on_Main_item_picked_up"]
[connection signal="player_dead" from="." to="HUD" method="_on_Tutorial_player_dead"]
[connection signal="powers_updated" from="." to="HUD" method="_on_Main_powers_updated"]
[connection signal="update_health" from="." to="HUD" method="_on_Main_update_health"]
[connection signal="won" from="." to="HUD" method="_on_Tutorial_won"]
[connection signal="spawn_boss" from="BossSegment0" to="." method="_on_BossSegment0_spawn_boss"]
[connection signal="spawn_enemies" from="StartSegment" to="." method="_on_StartSegment_spawn_enemies"]
[connection signal="spawn_player" from="StartSegment" to="." method="_on_StartSegment_spawn_player"]
[connection signal="depart" from="Boat" to="." method="_on_Boat_depart"]
[connection signal="timeout" from="HUD/Timer" to="." method="_on_Timer_timeout"]
